Setup sell page

--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -306,3 +306,6 @@ $thumbnail-bg: #fff;
 // Pagination
 $pagination-color: $body-color;
 $pagination-disabled-color: $gray-400;
+
+$navbar-nav-link-padding-x: 1.15rem;
+// $navbar-nav-link-padding-y: 1rem;
