--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -308,4 +308,4 @@ $pagination-color: $body-color;
 $pagination-disabled-color: $gray-400;
 
 $navbar-nav-link-padding-x: 1.15rem;
-// $navbar-nav-link-padding-y: 1rem;
+$navbar-nav-link-padding-y: 0.2rem;
