--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -48,7 +48,8 @@ $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
 
-$blue: #07f;
+// $blue: #07f;
+$blue: #3360a3;
 $azure: #45aaf2;
 $indigo: #6574cd;
 $purple: #a55eea;
@@ -67,7 +68,8 @@ $text-muted-dark: #6e7687;
 
 $white: #fff;
 
-$primary: $blue;
+// $primary: $blue;
+$primary: #2E85DE;
 $secondary: $gray-600;
 $success: $green;
 $info: $azure;
@@ -121,7 +123,8 @@ $social-colors: (
 	"bitbucket": #0052cc,
 );
 
-$body-bg: #f5f7fb;
+$body-bg: #EEEFF3;
+// $body-bg: #f5f7fb;
 $body-color: $gray-700;
 
 // Code
@@ -158,7 +161,8 @@ $custom-select-focus-border-color: #1991eb;
 // Borders
 $border-width: 1px;
 //$border-color: #dee3eb;
-$border-color: rgba(0, 40, 100, .12);
+// $border-color: rgba(0, 40, 100, .12);
+$border-color: #DCE0E5;
 $border-color-dark: rgba(0, 40, 100, .24);
 
 // Inputs
