--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -100,6 +100,7 @@ $colors: (
 
 $theme-colors: (
 	"primary": $primary,
+	"blue": $blue,
 	"dark-blue": $dark-blue,
 	"secondary": $secondary,
 	"success": $success,
