Use other green color

--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -59,7 +59,7 @@ $red: #cd201f;
 $orange: #fd9644;
 $yellow: #f1c40f;
 $lime: #7bd235;
-$green: #5eba00;
+$green: #33B753;
 $teal: #2bcbba;
 $cyan: #17a2b8;
 
