Made markets page use more components

--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -55,8 +55,8 @@ $azure: #45aaf2;
 $indigo: #6574cd;
 $purple: #a55eea;
 $pink: #f66d9b;
-$red: #cd201f;
-$orange: #fd9644;
+$red: #f7412d;
+$orange: #ef8a62;
 $yellow: #f1c40f;
 $lime: #7bd235;
 $green: #33B753;
