--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -11,7 +11,7 @@ $enable-print-styles: true;
 $font-family-base: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 $font-family-monospace: Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-$font-size-base: .9375rem;
+$font-size-base: 1rem;
 $font-size-lg: 1.125rem;
 $font-size-sm: .875rem;
 
