Add signup card tests

--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -45,6 +45,7 @@
 @import "./components/select-group";
 @import "./components/list-group";
 @import "./components/form-control";
+@import "./components/label";
 
 .btn {
   font-weight: 600;
