Added loading indicator for signup button

--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -46,6 +46,7 @@
 @import "./components/list-group";
 @import "./components/form-control";
 @import "./components/label";
+@import "./components/btn";
 
 .btn {
   font-weight: 600;
