--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -47,6 +47,7 @@
 @import "./components/form-control";
 @import "./components/label";
 @import "./components/btn";
+@import "./components/custom-select";
 
 .btn {
   font-weight: 600;
@@ -56,15 +57,6 @@
   @include media-breakpoint-down(sm) {
     font-size: 1.75rem;
   }
-}
-
-
-html, body {
-  height: 100%;
-}
-
-#app {
-  height: 100%;
 }
 
 .page {
@@ -99,10 +91,7 @@ label {
 }
 
 .view {
-  // max-width: 800px;
-  // margin: 0 auto;
   position: relative;
-  height: 100%;
 }
 .fade-enter-active, .fade-leave-active {
   transition: all 100ms ease
