--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -52,11 +52,11 @@
   font-weight: 600;
 }
 
-.h1 {
-  @include media-breakpoint-down(sm) {
-    font-size: 1.75rem;
-  }
-}
+// .h1 {
+//   @include media-breakpoint-down(sm) {
+//     font-size: 1.75rem;
+//   }
+// }
 
 .page {
   padding-top: 5rem;
