--- a/src/scss/bootstrap/_setting.scss
+++ b/src/scss/bootstrap/_setting.scss
@@ -316,5 +316,6 @@ $thumbnail-bg: #fff;
 $pagination-color: $body-color;
 $pagination-disabled-color: $gray-400;
 
+$navbar-padding-x: 0.75rem;
 $navbar-nav-link-padding-x: 1.15rem;
 $navbar-nav-link-padding-y: 0.2rem;
