--- a/src/scss/bootstrap/components/_card.scss
+++ b/src/scss/bootstrap/components/_card.scss
@@ -30,6 +30,7 @@
         border-radius: 0;
         border-left: 0;
         border-right: 0;
+        margin-top: -1px;
       }
 
       .card-header {
