--- a/src/scss/bootstrap/_settings.scss
+++ b/src/scss/bootstrap/_settings.scss
@@ -11,7 +11,7 @@ $enable-print-styles: true;
 $font-family-base: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 $font-family-monospace: Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-$font-size-base: 1rem;
+$font-size-base: 1rem; // 16px
 $font-size-lg: 1.125rem;
 $font-size-sm: .875rem;
 
@@ -323,3 +323,5 @@ $navbar-nav-link-padding-y: 0.2rem;
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
+
+@import "./src/scss/bootstrap/rem-calc";
