--- a/src/scss/bootstrap/components/_btn.scss
+++ b/src/scss/bootstrap/components/_btn.scss
@@ -4,6 +4,13 @@
     // text-indent: -13337px;
     color: transparent;
 
+    &.active {
+      color: transparent;
+      &:not(:disabled) {
+        color: transparent;
+      }
+    }
+
     svg {
       opacity: 0;
     }
