--- a/src/scss/bootstrap/components/_list-group.scss
+++ b/src/scss/bootstrap/components/_list-group.scss
@@ -5,12 +5,12 @@
   }
 
   &:hover {
-    .icon {
+    .icon.feather-chevron-right {
       transform: translateX(5px);
     }
   }
 
-  .icon {
+  .icon.feather-chevron-right {
     margin-right: -0.4rem;
     margin-left: 1rem;
     transition: 250ms all;
