Visual tweaks market page

--- a/src/scss/bootstrap/components/_btn.scss
+++ b/src/scss/bootstrap/components/_btn.scss
@@ -37,6 +37,12 @@
     height: 34px;
     line-height: 32px;
   }
+
+  &.btn-white {
+    background-color: $white;
+    color: $dark;
+    border-color: $white;
+  }
 }
 
 @-webkit-keyframes spinAround {
