--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -2,10 +2,6 @@
 // @import "~bootstrap/scss/bootstrap";
 @import "./src/scss/bootstrap/rem-calc";
 // Import the seperate components, so we can keep the CSS size as small as possible
-@function rem-calc2($size) {
-  $remSize: $size / 16;
-  @return #{$remSize}rem;
-}
 
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
@@ -76,6 +72,10 @@ html {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
+
+  // @include media-breakpoint-only(xs) {
+  //   font-size: 15px;
+  // }
 }
 
 .navbar {
