--- a/src/scss/bootstrap/bootstrap.scss
+++ b/src/scss/bootstrap/bootstrap.scss
@@ -74,7 +74,7 @@ html {
   text-size-adjust: 100%;
 
   // @include media-breakpoint-only(xs) {
-  //   font-size: 15px;
+  //   font-size: rem-calc(15);
   // }
 }
 
